--- a/src/main/resources/static/css/loadFiles.css
+++ b/src/main/resources/static/css/loadFiles.css
@@ -23,7 +23,7 @@ body{
 .logout {
     margin: 20px 100px auto auto;
     color: black;
-    background-color: #ED0101;
+    background-color: #FD2A2B;
     border-radius: 4px;
     text-decoration-line: none;
     padding: 12px;
