--- a/src/main/resources/static/css/loadFiles.css
+++ b/src/main/resources/static/css/loadFiles.css
@@ -19,3 +19,12 @@ body{
     align-items: center;
     margin-left: 25%;
 }
+
+.logout {
+    margin: 20px 100px auto auto;
+    color: black;
+    background-color: #FD2A2B;
+    border-radius: 4px;
+    text-decoration-line: none;
+    padding: 12px;
+}
