--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -17,7 +17,7 @@ body{
     font-size: 4vw;
     display: flex;
     align-items: center;
-    margin-left: 25%;
+    margin-left: auto;
 }
 
 .logout {
