--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -1,12 +1,20 @@
-.squareContainer {
+.container {
     display: flex;
     justify-content: space-evenly;
-    margin-top: 100px;
+    margin-top: 60px;
+    text-align: center;
 }
 
 .square {
     height: 250px;
     border-radius: 4px;
-    width: 250px;
-    border: 2px solid black;
+    width: 400px;
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+.imageHome {
+    margin-top: 50px;
+    height: 60%;
+    width: 40%;
 }
