--- a/src/main/resources/static/css/indicator/indicator-base.css
+++ b/src/main/resources/static/css/indicator/indicator-base.css
@@ -19,13 +19,19 @@
 }
 
 .dimension{
-    margin-top: 20px;
     border: 1px solid black;
     border-radius: 5px;
     width: 350px;
     height: 30px;
     line-height: 30px;
     margin-top: 1%;
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+}
+
+.active {
+    background-color: #acd9f8;
 }
 
 .indicatorContainer{
@@ -34,11 +40,20 @@
     text-align: center;
 }
 
+.chartContainer {
+    border: 1px solid black;
+    border-radius: 3px;
+}
+
 .exportData{
     border: 1px solid black;
     border-radius: 5px;
     width: 250px;
-    margin: auto;
+    margin: 30px auto 20px;
+    justify-content: center;
+    display: flex;
+    line-height: 40px;
+    cursor: pointer;
 }
 
 .logoExcel{
