Refact diseño graficos

--- a/src/main/resources/static/css/indicator/subdimension.css
+++ b/src/main/resources/static/css/indicator/subdimension.css
@@ -26,7 +26,7 @@
 .subDimensionAccordion .subDimensionContent li{
     list-style: none;
     padding-top: 12px;
-
+    font-size: 14px;
 }
 
 .subDimensionAccordion .subDimensionContent li a {
